Font Awesome Issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/main.css">
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
