--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="javascript/jquery-3.2.1.min.js"></script>
+  <script src="https://use.fontawesome.com/99969c4d7a.js"></script>
 
 </head>
 
